[package]
name = "moonc_wasm"
version = "0.6.32"
edition = "2018"
exclude = [".github/*"]
description = "Wasm version MoonBit Compiler Loader"
license = "Apache-2.0"

[lib]

[dependencies]
anyhow = { version = "1.0.86" }
v8 = "0.106.0"
libc = "0.2.172"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winerror", "winbase", "handleapi", "processenv"] }

[build-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12", features = ["blocking"] }
# For handling .tar archives
tar = "0.4"
# For Gzip decompression (.gz)
flate2 = "1.0"

[[bin]]
name = "moonc"